deployment/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gruppenname-backend-service
spec:
  ports:
    - port: 5000
  selector:
    app: gruppenname-backend
