deployment/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gruppenname-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: "gruppenname-ingress-demo-tls"
      hosts:
        - "gruppenname.demo.datexis.com"
  rules:
    - host: "gruppenname.demo.datexis.com"
      http:
        paths:
          - path:
            backend:
              serviceName: gruppenname-backend-service
              servicePort: 5000
